fix(BLE): Zephyr: enable aes driver when BT selected. (#1268)

--- a/MAX/Source/MAX32657/CMakeLists.txt
+++ b/MAX/Source/MAX32657/CMakeLists.txt
@@ -142,11 +142,15 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_CRYPTO_MAX32)
+if (CONFIG_CRYPTO_MAX32 OR CONFIG_BT)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_me30.c
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_revb.c
+)
+endif()
 
+if (CONFIG_CRYPTO_MAX32)
+zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/CRC/crc_me30.c
     ${MSDK_PERIPH_SRC_DIR}/CRC/crc_reva.c
 )
