Add hwinfo driver's dependencies
This commit adds hwinfo driver's dependencies to zephyr library sources

Signed-off-by: Furkan Akkiz <hasanfurkan.akkiz@analog.com>

--- a/MAX/Source/MAX32665/CMakeLists.txt
+++ b/MAX/Source/MAX32665/CMakeLists.txt
@@ -153,7 +153,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_SOC_FLASH_MAX32)
+if (CONFIG_SOC_FLASH_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_common.c
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_me14.c
