--- a/MAX/Source/MAX32672/CMakeLists.txt
+++ b/MAX/Source/MAX32672/CMakeLists.txt
@@ -126,7 +126,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_SOC_FLASH_MAX32)
+if (CONFIG_SOC_FLASH_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_common.c
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_me21.c
@@ -149,11 +149,15 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_CRYPTO_MAX32)
+if (CONFIG_CRYPTO_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_me21.c
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_revb.c
+)
+endif()
 
+if (CONFIG_CRYPTO_MAX32)
+zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/CTB/ctb_me21.c
     ${MSDK_PERIPH_SRC_DIR}/CTB/ctb_reva.c
     ${MSDK_PERIPH_SRC_DIR}/CTB/ctb_common.c
