--- a/MAX/Source/MAX32675/CMakeLists.txt
+++ b/MAX/Source/MAX32675/CMakeLists.txt
@@ -120,7 +120,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_SOC_FLASH_MAX32)
+if (CONFIG_SOC_FLASH_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_common.c
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_me15.c
@@ -136,7 +136,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_ENTROPY_MAX32_TRNG)
+if (CONFIG_ENTROPY_MAX32_TRNG OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/TRNG/trng_me15.c
     ${MSDK_PERIPH_SRC_DIR}/TRNG/trng_revb.c
