--- a/MAX/Source/MAX32662/CMakeLists.txt
+++ b/MAX/Source/MAX32662/CMakeLists.txt
@@ -129,7 +129,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_SOC_FLASH_MAX32)
+if (CONFIG_SOC_FLASH_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_common.c
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_me12.c
@@ -152,7 +152,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_CRYPTO_MAX32)
+if (CONFIG_CRYPTO_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_me12.c
     ${MSDK_PERIPH_SRC_DIR}/AES/aes_revb.c
