--- a/MAX/Source/MAX32670/CMakeLists.txt
+++ b/MAX/Source/MAX32670/CMakeLists.txt
@@ -23,6 +23,7 @@ if(NOT TARGET_REV)
 endif()
 
 zephyr_include_directories(
+    ${MSDK_PERIPH_SRC_DIR}/AES
     ${MSDK_PERIPH_SRC_DIR}/DMA
     ${MSDK_PERIPH_SRC_DIR}/FLC
     ${MSDK_PERIPH_SRC_DIR}/GPIO
@@ -105,7 +106,7 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_SOC_FLASH_MAX32)
+if (CONFIG_SOC_FLASH_MAX32 OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_common.c
     ${MSDK_PERIPH_SRC_DIR}/FLC/flc_me15.c
@@ -121,9 +122,16 @@ zephyr_library_sources(
 )
 endif()
 
-if (CONFIG_ENTROPY_MAX32_TRNG)
+if (CONFIG_ENTROPY_MAX32_TRNG OR CONFIG_HWINFO_MAX32)
 zephyr_library_sources(
     ${MSDK_PERIPH_SRC_DIR}/TRNG/trng_me15.c
     ${MSDK_PERIPH_SRC_DIR}/TRNG/trng_revb.c
+)
+endif()
+
+if (CONFIG_HWINFO_MAX32)
+zephyr_library_sources(
+    ${MSDK_PERIPH_SRC_DIR}/AES/aes_me15.c
+    ${MSDK_PERIPH_SRC_DIR}/AES/aes_revb.c
 )
 endif()
